src/components/media-player-controls.less
.MediaPlayerControls {

  &.MediaPlayerControls--standalone {
    padding: 15px;
    background-color: @edu-background-color-light;
    border-radius: @edu-border-radius-base;

    .ant-slider .ant-slider-rail {
      .ant-slider-rail {
        background-color: darken(@edu-background-color-base, 5%);
      }

      &:hover {
        .ant-slider-rail {
          background-color: darken(@edu-background-color-base, 20%);
        }
      }
    }
  }
}

.MediaPlayerControls-controls {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.MediaPlayerControls-controlsGroup {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.MediaPlayerControls-progressSlider {
  .ant-slider-mark-text {
    font-size: 11px;
  }

  .ant-slider-with-marks {
    margin-bottom: 20px;
  }
}

.MediaPlayerControls-volumeSlider {
  width: 60px;
}

.MediaPlayerControls-timeDisplay {
  padding-left: 20px;
}

